--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.2.5
 django-cors-headers==3.7.0
+django-jazzmin==2.4.8
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
