--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "c:\\Users\\Sergei\\Documents\\Документы\\djangoNew\\ecom-project\\venv\\Scripts\\python.exe"
+  "python.pythonPath": "venv\\Scripts\\python.exe"
 }
